--- a/package.json
+++ b/package.json
@@ -15,15 +15,17 @@
     "dev": "react-scripts-ts start",
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
-    "eject": "react-scripts-ts eject"
+    "eject": "react-scripts-ts eject",
+    "gh-page": "node scripts/gh-page"
   },
   "devDependencies": {
     "@types/jest": "^23.3.2",
     "@types/node": "^10.9.4",
     "@types/react": "^16.4.13",
     "@types/react-dom": "^16.0.7",
+    "gh-pages": "^1.2.0",
     "hacker-news-api-types": "^1.0.1",
     "typescript": "^3.0.3"
   },
-  "homepage" : "http://toxic-johann.github.io/hacker-news-reader"
+  "homepage": "https://toxic-johann.github.io/hacker-news-reader"
 }
