--- a/package.json
+++ b/package.json
@@ -7,12 +7,10 @@
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
     "react-scripts-ts": "^2.17.0",
-    "serve": "^10.0.1",
     "timeago.js": "^3.0.2"
   },
   "scripts": {
-    "start": "serve -s build",
-    "dev": "react-scripts-ts start",
+    "start": "react-scripts-ts start",
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject",
@@ -27,5 +25,6 @@
     "gh-pages": "^1.2.0",
     "hacker-news-api-types": "^1.0.1",
     "typescript": "^3.0.3"
-  }
+  },
+  "homepage": "https://toxic-johann.github.io/hacker-news-reader"
 }
